Login page is done!

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -150,3 +150,22 @@
     transform: translate(0px, 0px) scale(1);
   }
 }
+
+/* In your global.css */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: rgba(15, 23, 42, 0.3);
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: rgba(196, 113, 237, 0.5);
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: rgba(196, 113, 237, 0.8);
+}
